Images URL fixed

--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -2,7 +2,7 @@
 
 .cheaderimage1 {
   background-color: transparent;
-  background-image: url(/images/header-image1.jpg)!important;
+  background-image: url(https://raw.githubusercontent.com/antoniojosegteixeira/burger-place-website/main/images/header-image1.jpg)!important;
   background-size: cover;
 }
 
