Hero image url fix

--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -2,7 +2,7 @@
 
 .cheaderimage1 {
   background-color: transparent;
-  background-image: url(/assets/header-image1.jpg)!important;
+  background-image: url(burger-place-website/assets/header-image1.jpg)!important;
   background-size: cover;
 }
 
