--- a/css/components/components.css
+++ b/css/components/components.css
@@ -15,6 +15,14 @@
   width: 100%;
 }
 
+/* map */
+.map {
+  position:relative;
+  width:100%;
+  height:400px;
+}
+
+/* nav orange links */
 .nav-link.hover-orange {
   color:black;
 }
