--- a/css/animations/animations.css
+++ b/css/animations/animations.css
@@ -55,3 +55,18 @@
     opacity: 0;
   }
 }
+
+
+/* BURGER INGREDIENTS */
+
+@keyframes addUpRightIngredient {
+  100% {
+    transform: rotate(-180deg) translate(100%, -50%) rotate(180deg);
+  }
+}
+
+@keyframes addUpLeftIngredient {
+  100% {
+    transform: rotate(180deg) translate(-100%, -50%) rotate(-180deg);
+  }
+}
