--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -19,4 +19,36 @@
 }
 
 
+.burger-container {
+  height: 30vh;
+}
 
+.burger {
+  position: relative;
+}
+
+#burger-container > div > img {
+  width: 100%;
+}
+
+
+
+
+#burger-container > div:nth-child(1) {
+  z-index: 15;
+}
+#burger-container > div:nth-child(2) {
+  z-index: 14;
+}
+#burger-container > div:nth-child(3) {
+  z-index: 13;
+}
+#burger-container > div:nth-child(4) {
+  z-index: 12;
+}
+#b4 {
+  z-index: 11;
+}
+#b5 {
+  z-index: 10;
+}
