--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -18,16 +18,15 @@
   background-color:rgba(82, 82, 82, 0.445);
 }
 
+.blind-lighter {
+  background-color: rgba(44, 37, 42, 0.63);;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
 
-#b2 {
-  z-index: 13;
-}
-#b3 {
-  z-index: 12;
-}
-#b4 {
-  z-index: 11;
-}
-#b5 {
-  z-index: 10;
+.background-vintage {
+  position: absolute;
+  background-image: url("/assets/background.jpg");
+  background-size: 400px;
 }
